<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivEventImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="12dp"
                android:background="@color/lightGrey"
                android:contentDescription="@string/event_image_desc"
                app:shapeAppearanceOverlay="@style/RoundedImage"
                android:src="@drawable/ic_eh_logo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvEventTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_event_title"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEventLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_event_location"
                    android:textSize="14sp"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="2dp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvEventDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_event_date_time"
            android:textSize="14sp"
            android:textColor="@color/darkGrey"
            android:layout_marginTop="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvEventCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_event_category"
            android:textSize="14sp"
            android:textColor="@color/tan" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
